--- a/index.html
+++ b/index.html
@@ -1,59 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <link rel="icon" href="/pic/Capture.PNG" type="image/x-icon">
-    <link rel="stylesheet" href="facebook-top.css">
-    <link rel="stylesheet" href="facebook-bottom.css">
-    <link rel="stylesheet" href="body.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook &#x2012; log in or sign up</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./download.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+  <title>Facebook &#x2013; log in or sign up</title>
 </head>
-
 <body>
-    <div class="color">
-        <div class="facebook-top">
-            <div class="facebook-top-Main">
-                <div class="facebook-top-left">
-                    <img class="facebook-top-left-pic" src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg"
-                        alt="Facebook-Logo">
-                    <p class="facebook-top-left-text">Facebook helps you connect and share with the people in your life.
-                    </p>
-                </div>
-                <div class="facebook-top-right">
-                    <div class="facebook-top-right-main">
-                        <div>
-                            <form>
-                                <div class="facebook-top-right-input">
-                                    <input class="input1" type="text" placeholder="Email address or phone number"
-                                        required>
-                                    <input class="input2" type="text" placeholder="Password" required>
-                                    <input class="button" type="submit" value="Log in">
-                                    <p class="text1">Forgotten password&#63;</p>
-                                    <p class="bottom-width"></p>
-                                    <button class="button2">Create new account</button>
-                                </div>
-                            </form>
-                            <p class="facebook-top-text1"><span class="facebook-top-text2">Create a Page</span> for a
-                                celebrity, brand or business.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="contain">
+        <div class=" contain-item1">
+          <img src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" alt="logo">
+          <p>Facebook helps you connect and share with the people in your life.</p>
+        </div>
+        <div class="contain-item2">
+            <form>
+              <input class="input1 input11" type="email" placeholder="Email address or phone number" required>
+              <input class="input1 input2" type="password" name="password" placeholder="Password" required>
+              <input class="button1" type="button" value="Log in">
+              <p class="text-pass">Forgotten password?</p>
+              <p class="hr"></p>
+              <input class="button2" type="button" value="Create new account">
+            </form>
+            <p class="text-bottom"><span>Create a Page</span> for a celebrity, brand or business.</p>
         </div>
     </div>
-    <footer>
-        <address>
-            <b>
-                <p>Name: Muhammad Anas Rizwan</p>
-                <p>ID: WMA-265569</p>
-            </b>
-        </address>
-    </footer>
 </body>
-
 </html>
